# carsRaceGameAI

./: .gitignore  AIBehaviour.cpp  AIBehaviour.h  AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  README.md  circuitFunctions.c  circuitFunctions.cpp  circuitFunctions.h  circuitToCArray.py  gameLogic.cpp  gameLogic.h  gameTrainer.cpp  gameTrainer.h  generateAIMoves.cpp  generateAIMoves.h  main.c  main.cpp  pictureToCircuit.py  playGame.py  testCircuit.txt  testCircuitPoints.txt
AI/: DEBUG.txt  handMadeTest.txt  squareSpirale-gen-1.txt  test1-gen-1.txt  test1-gen0.txt  test1-gen1.txt  test1-gen10.txt  test1-gen11.txt  test1-gen12.txt  test1-gen13.txt  test1-gen14.txt  test1-gen15.txt  test1-gen16.txt  test1-gen17.txt  test1-gen18.txt  test1-gen19.txt  test1-gen2.txt  test1-gen20.txt  test1-gen21.txt  test1-gen22.txt  test1-gen23.txt  test1-gen24.txt  test1-gen25.txt  test1-gen26.txt  test1-gen27.txt  test1-gen28.txt  test1-gen29.txt  test1-gen3.txt  test1-gen30.txt  test1-gen31.txt  test1-gen32.txt  test1-gen33.txt  test1-gen34.txt  test1-gen35.txt  test1-gen36.txt  test1-gen37.txt  test1-gen4.txt  test1-gen5.txt  test1-gen6.txt  test1-gen7.txt  (+3 more)
AI/brains/: AI-gen0.bigBrain  AI-gen1.bigBrain  AI-gen10.bigBrain  AI-gen11.bigBrain  AI-gen12.bigBrain  AI-gen13.bigBrain  AI-gen14.bigBrain  AI-gen15.bigBrain  (+24 more)
circuits/: cornerSmallToBig.txt  cornerSmallToBigPoints.txt  hardAF.txt  hardAFPoints.txt  noGuidanceObstacles.txt  noGuidanceObstaclesPoints.txt  squareSpirale.txt  squareSpiralePoints.txt  test1.txt  test1Points.txt  test2.txt  test2Points.txt  testCircuit.txt
